login page completed, routing to initial dashboard page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-login></app-login>
+<!--<nav>-->
+<!--  <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>-->
+<!--</nav>-->
 <router-outlet></router-outlet>
