--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,4 +30,7 @@ div#formContainer {
   button {
     background-color: rgb(66,135,213);
   }
+  .mat-checkbox-ripple .mat-ripple-element, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+    background-color: rgb(66, 135, 213);
+  }
 }
